Scrollbar fix 2

--- a/staticfiles/templates/css/main.css
+++ b/staticfiles/templates/css/main.css
@@ -78,6 +78,7 @@ main {
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
   display: none !important;
+  width: 0 !important;
 }
 
 img {
